--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -17,6 +17,12 @@ body {
 background: linear-gradient(180deg, rgba(47,138,144,1) 0%, rgba(155,81,224,1) 20%);
 }
 
+footer p {
+  text-align:center;
+  padding: 10px 0;
+  background: rgb(47,138,144);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
