--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -13,14 +13,15 @@ body {
   background: radial-gradient(circle, rgba(255,255,255,1) 36%, rgba(155,81,224,1) 100%); */
   max-width:100%;
   min-height: 100%;
-  background: rgb(47,138,144);
-background: linear-gradient(180deg, rgba(47,138,144,1) 0%, rgba(155,81,224,1) 20%);
+  /* background: rgb(255,255,255);
+	background: radial-gradient(circle, rgba(255,255,255,1) 36%, rgba(155,81,224,1) 100%); */
+  /* background-repeat:no-repeat; */
+  
 }
 
 footer p {
   text-align:center;
   padding: 10px 0;
-  background: rgb(47,138,144);
 }
 
 code {
